<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.nicopasso.babbelkombat.ui.StartActivity"
  android:layout_margin="16dp">

  <TextView android:layout_width="0dp" android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:gravity="center"
    android:text="@string/title"
    android:textSize="70sp"
    android:id="@+id/title_textview"
    android:layout_marginTop="24dp"
    android:textColor="@android:color/black"/>


  <com.nicopasso.babbelkombat.customviews.BKTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:id="@+id/number_tetxview"
    android:text="@string/number_of_players"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title_textview"
    android:layout_marginTop="32dp"
    android:textSize="40sp"
    android:textColor="@color/colorAccent"
  />

  <com.nicopasso.babbelkombat.customviews.BKButton android:layout_width="0dp" android:layout_height="50dp"
    android:id="@+id/one_player_btn"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintTop_toBottomOf="@+id/number_tetxview"
    android:layout_marginTop="16dp"
    android:text="1"
    android:textSize="22sp"
    app:layout_constraintRight_toLeftOf="@+id/two_players_btn"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginEnd="8dp"/>

  <com.nicopasso.babbelkombat.customviews.BKButton android:layout_width="0dp" android:layout_height="50dp"
    android:id="@+id/two_players_btn"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintTop_toBottomOf="@+id/number_tetxview"
    android:layout_marginTop="16dp"
    android:text="2"
    android:textSize="22sp"
    app:layout_constraintLeft_toRightOf="@+id/one_player_btn"
    app:layout_constraintRight_toLeftOf="@+id/three_players_btn"
    android:layout_marginEnd="8dp"
  />

  <com.nicopasso.babbelkombat.customviews.BKButton android:layout_width="0dp" android:layout_height="50dp"
    android:id="@+id/three_players_btn"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintTop_toBottomOf="@+id/number_tetxview"
    android:layout_marginTop="16dp"
    android:text="3"
    android:textSize="22sp"
    app:layout_constraintLeft_toRightOf="@+id/two_players_btn"
    app:layout_constraintRight_toLeftOf="@+id/four_players_btn"
    android:layout_marginEnd="8dp"/>

  <com.nicopasso.babbelkombat.customviews.BKButton android:layout_width="0dp" android:layout_height="50dp"
    android:id="@+id/four_players_btn"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintTop_toBottomOf="@+id/number_tetxview"
    android:layout_marginTop="16dp"
    android:text="4"
    android:textSize="22sp"
    app:layout_constraintLeft_toRightOf="@+id/three_players_btn"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginEnd="8dp"
  />

  <ImageView android:layout_width="150dp" android:layout_height="150dp"
    app:layout_constraintTop_toBottomOf="@id/four_players_btn"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:src="@drawable/logo"
    app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
